tests/baselines/reference/compoundExponentiationAssignmentLHSCanBeAssigned1.errors.txt
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(11,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(12,8): error TS18050: The value 'undefined' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(18,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(19,8): error TS18050: The value 'undefined' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(25,8): error TS18050: The value 'null' cannot be used here.
compoundExponentiationAssignmentLHSCanBeAssigned1.ts(26,8): error TS18050: The value 'undefined' cannot be used here.


==== compoundExponentiationAssignmentLHSCanBeAssigned1.ts (6 errors) ====
    enum E { a, b, c }
    
    var a: any;
    var b: number;
    var c: E;
    
    var x1: any;
    x1 **= a;
    x1 **= b;
    x1 **= c;
    x1 **= null;
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x1 **= undefined;
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x2: number;
    x2 **= a;
    x2 **= b;
    x2 **= c;
    x2 **= null;
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x2 **= undefined;
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    var x3: E;
    x3 **= a;
    x3 **= b;
    x3 **= c;
    x3 **= null;
           ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x3 **= undefined;
           ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.